feat: escape key closes tag edit and tag filter popups

--- a/templates/tpl_widget_tags_editor_panel.html
+++ b/templates/tpl_widget_tags_editor_panel.html
@@ -459,5 +459,9 @@
         {
             toggleTagsPinsDisplay()
         }
+        else if (e.code === 'Escape' && !e.shiftKey)
+        {
+            closeTagsPopup()
+        }
     })
 </script>
