--- a/templates/tpl_widget_tags_filter_panel.html
+++ b/templates/tpl_widget_tags_filter_panel.html
@@ -227,5 +227,9 @@
         {
             toggleTagsFilterDisplay()
         }
+        else if (e.code === 'Escape' && !e.shiftKey)
+        {
+            closeTagsFilterPopup()
+        }
     })
 </script>
