fix: tag edit list is close when popup background is clicked

--- a/templates/tpl_widget_tags_editor_panel.html
+++ b/templates/tpl_widget_tags_editor_panel.html
@@ -156,6 +156,8 @@
         tagBtns[tagId] = new TagItem(item)
     })
 
+    // tags background
+    document.querySelector('.tags-popup-background').addEventListener('click', closeTagsPopup)
 
 
     function toggleTagsPopupDisplay()
