--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,11 +1,58 @@
+:root
+{
+    --clr-gray3: #545151;
+    --clr-main-bg: #7a7676;
+    --clr-popup-bg: #918d8d;
+    --clr-popup-bg-border: black;
+    --clr-popup-backrop: black;
+    --clr-sel-bg: #737771;
+    --clr-sel: #7ea87e;
+
+    --clr-img-ctrl-bg-hover: rgba(84, 81, 81, 60%);
+
+    --clr-tag-sel-pos: #7ea87e;
+    --clr-tag-sel-neg: #a85c4d;
+    --clr-tagpin-bg: #918d8d;
+
+    --clr-tagset-label: #545151;
+
+    --clr-alert-succ-tr: #23F31500;
+    --clr-alert-succ-op: #23F315FF;
+    --clr-alert-fail-tr: #F3154900;
+    --clr-alert-fail-op: #F31549FF;
+
+    --clr-tile-ov1-bg: #00000033;
+    --clr-tile-ov1-text: white;
+    --clr-tile-ov2-bg: #7A7676B2;
+    --clr-tile-ov2-text: black;
+    /*--clr-tile-sel: green;*/
+
+    --clr-plt-text: #00000066;
+    --clr-plt-frame: #0000007F;
+    --clr-plt-save-btn-bg: #00000000;
+    --clr-plt-text2: rgba(0,0,0,0.3);
+    --clr-plt-border2: rgba(0,0,0,0.2);
+
+    --clr-tile-hedden-border: white;
+
+    --url-icon-up:   url("/static/arrow_up.png");
+    --url-icon-down: url("/static/arrow_down.png");
+    --url-icon-pinon:  url("/static/pin_on.png");
+    --url-icon-pinoff: url("/static/pin_off.png");
+    --url-icon-favon:  url("/static/fav_on.png");
+    --url-icon-favoff: url("/static/fav_off.png");
+    --url-icon-timer: url("/static/timer.png");
+    --url-icon-edit:  url("/static/edit.png");
+}
+
 body
 {
-    background-color: #7a7676;
+    background-color: var(--clr-main-bg);
 }
 
 .body-sel-mode-on
 {
-    background-color: #737771 !important;
+    background-color: var(--clr-sel-bg) !important;
 }
 
 button
@@ -33,7 +80,7 @@ button
 
 .back-btn
 {
-    color: #545151;
+    color: var(--clr-gray3);
 }
 
 .no-decor, .no-decor:active, .no-decor:hover, .no-decor:visited, .no-decor:focus
@@ -61,8 +108,8 @@ button
     border: none;
     padding: 2px;
 }
-.rate-up {background-image: url("/static/arrow_up.png");}
-.rate-dn {background-image: url("/static/arrow_down.png");}
+.rate-up {background-image: var(--url-icon-up);}
+.rate-dn {background-image: var(--url-icon-down);}
 
 /* Use instead of style="display: hidden" */
 .vis-hide
@@ -103,8 +150,8 @@ button
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #918d8d;
-    border: 1px black;
+    background-color: var(--clr-popup-bg);
+    border: 1px var(--clr-popup-bg-border);
     padding: 15px;
     overflow: auto;
     z-index: 99999;
@@ -118,7 +165,7 @@ button
 
 .tags-popup-background {
     position: fixed;
-    background-color: black;
+    background-color: var(--clr-popup-backrop);
     opacity: 0.5;
     left: 0;
     top: 0;
@@ -137,7 +184,6 @@ button
     max-width: calc(80vw);
     min-width: calc(10vw);
     max-height: calc(70vh);
-    /*grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));*/
     grid-template-columns: repeat(auto-fill, auto);
     grid-template-rows: repeat(auto-fill, minmax(20px, 1fr));
     grid-auto-flow: column;
@@ -168,40 +214,40 @@ button
     min-width: 150px;
 }
 
-.tag-link {
-    background-color: #b0aeae;
-    text-decoration: none;
-    margin: 2px;
-}
+/*.tag-link {*/
+/*    background-color: #b0aeae;*/
+/*    text-decoration: none;*/
+/*    margin: 2px;*/
+/*}*/
 
-.tag-link {
-    background-color: #b0aeae;
-    text-decoration: none;
-    margin: 2px;
-    transition: background-color 0.2s;
-}
+/*.tag-link {*/
+/*    background-color: #b0aeae;*/
+/*    text-decoration: none;*/
+/*    margin: 2px;*/
+/*    transition: background-color 0.2s;*/
+/*}*/
 
 .tag-selected, .tag-selected:hover {
-    background-color: #7ea87e !important;
+    background-color: var(--clr-tag-sel-pos) !important;
 }
 
 .tag-selected-pos, .tag-selected-pos:hover {
-    background-color: #7ea87e !important;
+    background-color: var(--clr-tag-sel-pos) !important;
 }
 
 .tag-selected-neg, .tag-selected-neg:hover {
-    background-color: #a85c4d !important;
+    background-color: var(--clr-tag-sel-pos) !important;
 }
 
 
-.tag-link:active, .tag-link:visited, .tag-link:hover, .tag-link:focus {
-    text-decoration: none;
-    color: black;
-}
+/*.tag-link:active, .tag-link:visited, .tag-link:hover, .tag-link:focus {*/
+/*    text-decoration: none;*/
+/*    color: black;*/
+/*}*/
 
-.tag-link:hover {
-    background-color: #cccccc;
-}
+/*.tag-link:hover {*/
+/*    background-color: #cccccc;*/
+/*}*/
 
 #tags-pins
 {
@@ -211,7 +257,7 @@ button
     right:10px;
     transition: right 0.5s, opacity 0.2s;
     opacity: 1;
-    background-color: #918d8d;
+    background-color: var(--clr-tagpin-bg);
 }
 
 #tags-pins #controls {
@@ -228,10 +274,10 @@ button
     background-size: cover;
     border: none;
     padding: 2px;
-    background-image: url("/static/pin_off.png");
+    background-image: var(--url-icon-pinoff);
     background-color: transparent;
 }
-.tag-pin-on {background-image: url("/static/pin_on.png");}
+.tag-pin-on {background-image: var(--url-icon-pinon);}
 
 
 .tags-list {}
@@ -252,14 +298,53 @@ button
 
 .tag-set-pos
 {
-    border: 2px solid #7ea87e;
+    border: 2px solid var(--clr-tag-sel-pos);
 }
 
 .tag-set-neg
 {
-    border: 2px solid #a85c4d;
+    border: 2px solid var(--clr-tag-sel-neg);
 }
 
+
+.tagset-list
+{}
+
+.tagset-list li:first-child
+{
+    margin-top: 2px;
+}
+.tagset-list li
+{
+    margin-top: 15px;
+}
+.tagset-list li h2
+{
+    margin-top: 0;
+    margin-bottom: 2px;
+}
+
+.tagset-list li p
+{
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+
+.tagset-list .tagset-label
+{
+    width: 80px;
+    color: var(--clr-tagset-label);
+}
+
+.tagset-list li a, .tagset-list li a:visited, .tagset-list li a:hover
+{
+    color: inherit;
+    text-decoration: none;
+}
+.tagset-list li a:hover
+{
+    text-decoration: underline;
+}
 /* END TAGS */
 
 
@@ -283,13 +368,13 @@ button
 /* Operation Success */
 @keyframes animSucc {
     0% {
-        border: 1px solid rgba(35, 243, 21, 0.0);
-        background-color: rgba(35, 243, 21, 0.0);
+        border: 1px solid var(--clr-alert-succ-tr);
+        background-color: var(--clr-alert-succ-tr);
     }
     10%
     {
-        border: 1px solid rgba(35, 243, 21, 1);
-        background-color: rgba(35, 243, 21, 1);
+        border: 1px solid var(--clr-alert-succ-op);
+        background-color: var(--clr-alert-succ-op);
     }
     100%
     {
@@ -305,13 +390,13 @@ button
 /* Operation Fail */
 @keyframes animFail {
     0% {
-        border: 1px solid rgb(243, 21, 73, 0.0);
-        background-color: rgb(243, 21, 73, 0.0);
+        border: 1px solid var(--clr-alert-fail-tr);
+        background-color: var(--clr-alert-fail-tr);
     }
     10%
     {
-        border: 1px solid rgb(243, 21, 73, 1);
-        background-color: rgb(243, 21, 73, 1);
+        border: 1px solid var(--clr-alert-fail-op);
+        background-color: var(--clr-alert-fail-op);
     }
     100%
     {
