fixed tag negative color

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -236,7 +236,7 @@ button
 }
 
 .tag-selected-neg, .tag-selected-neg:hover {
-    background-color: var(--clr-tag-sel-pos) !important;
+    background-color: var(--clr-tag-sel-neg) !important;
 }
 
 
