--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -73,7 +73,7 @@
 
         new ImageLazyLoad('.thumb', false, '300px')
 
-        rating = new RateMultImages('rate-up', 'rate-dn', 'loading', 'op-success', 'op-fail')
+        rating = new RateMultImages('#rate-up', '#rate-dn', 'loading', 'op-success', 'op-fail')
         rating.updateImageIds = function ()
         {
             this.setImageIds(selection.selectedIds)
