--- a/templates/tpl_discover.html
+++ b/templates/tpl_discover.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <div class="feed-container">
-    <div id="more-trigger"></div>
-    <div class="feed">
-    </div>
+    <div id="upper-trigger"></div>
+    <div class="feed"></div>
+    <div id="lower-trigger"></div>
 </div>
 
 <div id="post-tpl" class="vis-hide post">
@@ -20,8 +20,7 @@
         </a>
     </div>
     <div class="post-details">
-        <div class="tags">
-        </div>
+        <div class="tags"></div>
         <div class="rate">
             <button class="rate-up btn-bg-blend" id="rate-up" value="0"></button>
             <span id="image-rating">-</span>
