fix: tags were not assigning at single image page

--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -108,6 +108,7 @@
 
         selection = new ImageSelection('stub-select-btn', '.stub-gallery', '.stub-thumb')
         selection.selectedIds = [{{ image.image_id }}]
+        selection.selectionMode = true
 
         let imgParams = new ImgParams('image-id', 'same-folder', 'time-planned', 'is-fav', 'min-rating', 'tag-set')
 
