refactored tag editor template and add-to-board template. Moved scripts to respective js files. Rewrote main.js simpleShowLoadableWidget method to load only scripts that has urls. Added loadScript promise

--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -459,9 +459,9 @@
             '{{ url_for('routes_tags.embed_panel_tag_editor') }}',
             '#tags-button',
             '#tags-popup-container',
-            (container) =>
+            () =>
             {
-                container.querySelector('.tags-popup').style.display = ''
+                toggleTagsPopupDisplay()
             })
 
         // boards
@@ -469,9 +469,9 @@
             '{{ url_for('routes_board.widget_get_boards_all') }}',
             '#board-button',
             '#board-popup-container',
-            (container) =>
+            () =>
             {
-                container.querySelector('.popup').classList.remove('vis-hide')
+                document.querySelector('#board-popup-container .popup').classList.remove('vis-hide')
             })
 
         // palette
