added image_extra table; fps and duration are assigned on video import and then populated to tpl_video.html

--- a/templates/tpl_video.html
+++ b/templates/tpl_video.html
@@ -8,7 +8,7 @@
 	<title>Video ({{ image.image_id }})</title>
 </head>
 <body>
-<div style="display: none" id="image-id">{{ image.image_id }}</div>
+<div style="display: none" id="image-id" data-extra="{{ extra }}">{{ image.image_id }}</div>
 <div style="display: none">{{ image.path }}</div>
 <div class="modal">
     <div class="modal-img-container">
