renamed "Search by tags" to "All"

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -10,9 +10,9 @@
 <body>
 <div class="header">
     <h1>Overview</h1>
+    <a href="/tagged?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">All</a>
     <a href="/favs?page=1" class="no-decor but-decor-hover">Favourites</a>
     <a href="/latest_study?page=1" class="no-decor but-decor-hover">Last study</a>
-    <a href="/tagged?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">Search by tags</a>
     <a href="/tags" class="no-decor but-decor-hover">Tags</a>
     <a href="/tag-sets" class="no-decor but-decor-hover">Sets</a>
     <a href="/path-tags" class="no-decor but-decor-hover">Paths</a>
